# nxp-pac

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/ci/: doc.sh
.github/workflows/: ci.yaml
data/metadata/: LPC55S16.json  LPC55S6x.json  MCXA256.json  MCXA2xx.json  MCXA5xx.json  MIMXRT1011.json  MIMXRT106x.json  schema.json
data/metadata/peripherals/: README.md  update.sh
data/transforms/: lpc55s16.yaml  lpc55s69_cm33.yaml  mcxa256.yaml  mcxa577.yaml  mcxn947_cm33_core0.yaml  mimxrt1011.yaml  mimxrt1062.yaml  mimxrt1064.yaml  mimxrt685s_cm33.yaml  remove-namespace.yaml  sanitize.yaml
data/transforms/imxrt/: gpio.yaml
data/transforms/imxrt685s/: adc.yaml
data/transforms/mcx/: gpio.yaml
data/transforms/mcxa/: adc.yaml  can.yaml  cdog.yaml  cmc.yaml  ctimer.yaml  dma.yaml  flexpwm.yaml  gpio.yaml  i3c.yaml  inputmux.yaml  lpi2c.yaml  lpspi.yaml  lpuart.yaml  mbc.yaml  mrcc.yaml  ostimer.yaml  port.yaml  rtc.yaml  scg.yaml  sgi.yaml  spc.yaml  trng.yaml  wwdt.yaml
generator/: Cargo.toml  README.md
generator/src/: lib.rs  main.rs  metadata.rs  metapac.rs  pac.rs  util.rs
generator/src/commands/: extract.rs  generate.rs  mod.rs
nxp-pac/: Cargo.toml  README.md  build.rs
nxp-pac/src/: lib.rs  metadata.rs
nxp-pac/src/meta_peripherals/: _peripherals.rs
src/: lib.rs
src/chips/mcxa577/: _vectors.rs  adc.rs  ahbsc.rs  can.rs  cdog.rs  cmc.rs  device.x  dgdet.rs  dma.rs  dma1.rs  edma0_tcd.rs  edma1_tcd.rs  edma_0_tcd.rs  enet.rs  enet0__eqos_dma.rs  enet0__eqos_dma_ch.rs  enet0__eqos_mtl.rs  enet0__eqos_mtl_q.rs  espi.rs  ewm.rs  flexspi.rs  fmc.rs  freqme.rs  glikey.rs  (+34 more)
(+1390 files in other folders)
