[package]
name = "generator"
version = "0.1.0"
edition = "2024"
publish = false
license = "BSD-3-Clause"
description = "Generator for nxp-pac"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }

anyhow = "1.0.98"
rayon = "1.10.0"
temp-dir = "0.1.16"
svd-parser = "0.14.9"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
read-dir-all = "1.0.0"
indexmap = { version = "2.13.0", features = ["serde"] }
inflections = "1.1"

chiptool = { git = "https://github.com/embassy-rs/chiptool.git", rev = "2fd28c5825998008a1a2ab8bab18555c2e314334" }
